fixed bug where horizontal scroll was expanding during intro transition

--- a/src/SCSS/_style.scss
+++ b/src/SCSS/_style.scss
@@ -477,6 +477,7 @@
 	  }
 
 	  .screen {
+	  	position:relative;
 	    width: 100%;
 	    // height: 100vh;
 	    overflow: hidden;
@@ -1098,19 +1099,21 @@ nav{
 
 
 .introTransition-leave {
+	position:absolute;
 	opacity:1;
+	 transform: translate3d(-100%,0,0);
   
 }
 
 .introTransition-leave.introTransition-leave-active {
 opacity:0;
- transform: translate3d(-100%,0,0);
+ transform: translate3d(-200%,0,0);
  transition: all ease-out 1500ms;
  @include expoOut();
 }
 
 .introTransition-enter {
-	position:absolute;
+	position:relative;
 	opacity:0;
 	transform: translate3d(100%,0,0);
 
